[project]
name = "cleanup-service"
version = "0.1.0"
description = "Scheduled sweep that deactivates expired links and emits link.expired"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika==9.5.7",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "B008",
    "S104",
    "UP037",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
