[project]
name = "gateway"
version = "0.1.0"
description = "API gateway: authenticates, routes, and forwards to internal services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.137.1",
    "gunicorn==26.0.0",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "structlog==26.1.0",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "B008",
    "S104",
    "UP037",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
