[project]
name = "qr-service"
version = "0.1.0"
description = "Stateless QR code generator for short links"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.137.1",
    "gunicorn==26.0.0",
    "pydantic-settings==2.14.1",
    "qrcode[pil]==8.2",
    "structlog==26.1.0",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "B008",
    "S104",
    "UP037",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["qrcode.*"]
ignore_missing_imports = true
